# lelamp_runtime

./: .coverage  .env.example  .gitattributes  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  COMMIT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXECUTION_SESSION.md  FINAL_DEPLOYMENT_SUCCESS_REPORT.md  FINAL_FIX_REPORT.md  IMPROVEMENT_REPORT.md  P0_FIX_SUMMARY.md  P0_SECURITY_FIX_REPORT.md  P1_P2_FIX_SUMMARY.md  PORT_CONFLICT_FIX.md  PROJECT_ASSESSMENT.md  PROJECT_COMPLETION_REPORT.md  QUICK_REFERENCE.md  QUICK_START.txt  RASPBERRY_PI_DEPLOYMENT_REPORT.md  README.md  RGB_CONTROL_FIX.md  SECURITY_FIX_NOTICE.md  SETTINGS_INTERFACE_VALIDATION_REPORT.md  SETTINGS_QUICK_REFERENCE.md  START_PROMPT.md  USER_GUIDE.md  WEB_CLIENT_MIGRATION_SUMMARY.md  alembic.ini  cleanup_md_docs.sh  cleanup_test_files.sh  entry.py  launch-execution.sh  lelamp.db  main.py  main_deepseek.py  package.json  (+22 more)
.archive/docs_20260317_221813/: CLEANUP_SUMMARY.md  COMMANDS_REFERENCE.md  CONTRIBUTORS.md  PHASE3_ACCEPTANCE_CHECKLIST.md  PHASE3_FINAL_SUMMARY.md
.archive/test_20260317_221631/: ALL_FIXED.md  CAMERA_GUIDE.md  CAMERA_QUICKSTART.md  FIXED_LICENSE_ISSUE.md  FRONTEND_TEST_SUMMARY.md  LICENSE_SETUP.md  MACOS_LIMITATION.md  TESTING_QUICKSTART.md  TEST_GUIDE.md  TEST_RESULTS_PHASE3.md  fix_env.sh  quick_test.sh  test_frontend.sh  test_phase3.sh
alembic/: env.py
alembic/versions/: 8a9ced53b222_initial_schema.py
docs/: API.md  ARCHITECTURE.md  AUTO_STARTUP_GUIDE.md  BACKEND_DEVELOPMENT_PLAN.md  CAPTIVE_PORTAL_GUIDE.md  COMMERCIAL_APP_ARCHITECTURE.md  COMMERCIAL_LIVEKIT_TOKEN_GUIDE.md  COMMERCIAL_SETUP.md  CURRENT_STATUS.md  DATABASE_FIX_PLAN.md  DATABASE_ISSUE_SOLVED.md  EDGE_VISION_DESIGN_ANALYSIS.md  EDGE_VISION_MODEL_INFO.md  EDGE_VISION_QUICK_REF.md  EDGE_VISION_SETUP.md  EDGE_VISION_SSH_QUICK_REF.md  EDGE_VISION_TEST_PI.md  EDGE_VISION_TEST_SUMMARY.md  FEATURES.md  FINAL_STATUS.md  GPIO_PERMISSION_SETUP.md  HAND_TRACKING_GUIDE.md  HOW_TO_USE.md  MOTOR_HEALTH_MONITORING.md  PHASE1_TEST_REPORT.md  PHASE2_TASK_SPECS.md  PHASE3_COMPLETION_REPORT.md  PROACTIVE_VISION_GUIDE.md  PRODUCT_APP_REVIEW.md  PRODUCT_IMPLEMENTATION_ROADMAP.md  PRODUCT_POSITIONING.md  PRODUCT_REVIEW_SUMMARY.md  PRODUCT_UX_JOURNEY.md  PROJECT_OPTIMIZATION_STATUS.md  PYTHON312_UPGRADE.md  PYTHON_INSTALLATION.md  SECURITY.md  SETUP_GUIDE.md  SIMPLIFY_PROACTIVE_VISION.md  SYNC_STATUS.md  (+6 more)
docs/plans/: 2025-03-19-comprehensive-optimization-plan.md  2026-03-17-backend-phase3-enhancement.md  2026-03-17-project-optimization-design.md  2026-03-17-project-optimization-implementation.md  2026-03-17-web-frontend-modernization-design.md  2026-03-17-web-frontend-modernization-plan.md  2026-03-17-web-frontend-phase1-mvp-design.md  2026-03-17-web-frontend-phase1-mvp-implementation.md  2026-03-17-web-frontend-phase1-testing-plan.md  2026-03-19-captive-portal-design.md  2026-03-19-captive-portal-implementation.md  2026-03-19-livekit-tmux-systemd-service.md  2026-04-01-commercialization-design.md  2026-04-01-commercialization-plan.md  2026-04-02-gesture-motor-ux-design.md  (+10 more)
lelamp/: calibrate.py  config.py  list_recordings.py  record.py  replay.py  setup_motors.py  turn_off.py
lelamp/api/: app.py  (+5 more)
scripts/: build_web.sh  check_settings_api.py  debug_api_startup.sh  deploy_to_pi.sh  diagnose_database.py  diagnose_gpio.sh  dnsmasq.conf  download_edge_vision_models.sh  ensure_dependencies.sh  first_boot_setup.sh  fix_rgb_control.sh  generate_client_token.py  install_captive_portal.sh  lelamp-captive-portal.service  lelamp-livekit.service  lelamp-setup.service  maintain_database.py  manual_fix_rgb.md  push_to_pi.sh  quick_test_proactive.py  setup_all_services.sh  setup_api_startup.sh  setup_auto_startup.sh  setup_auto_startup_simple.sh  setup_full_service.sh  setup_gpio_permissions.sh  setup_sudoers.sh  start_api_server.sh  start_api_with_gpio.sh  sync_status.sh  sync_to_pi.sh  test_api_on_pi.sh  test_api_results.sh  test_camera_save_frames.py  test_camera_text.py  test_captive_portal.sh  test_edge_vision_on_pi.sh  test_face_hands_nocam.py  test_face_hands_simple.py  test_face_hands_tracking.py  (+10 more)
tests/: __init__.py  conftest.py  test_agent_behavior.py  test_agent_tools.py  test_api_minimal.py  test_api_routes.py  test_basic.py  test_cache.py  test_cache_manager.py  test_captive_portal.py  test_config.py  test_database.py  test_edge_vision.py  test_exceptions.py  test_joints.py  test_memory.py  test_more_coverage.py  test_service_base.py  test_utils.py
web/: .env.development  .env.production  .eslintrc.json  .gitignore  README.md  TESTING_GUIDE.md  URL_CONFIG_GUIDE.md  components.d.ts  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web_client/: README.md  app.js  index.html  style.css
(+241 files in other folders)
