[project]
name = "lelamp-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feetech-servo-sdk>=1.0.0",
    "lerobot>=0.3.3",
    "livekit>=0.18.2",
    "livekit-agents~=1.3.10",
    "livekit-plugins-openai~=1.3.10",
    "livekit-plugins-silero~=1.3.10",
    "livekit-plugins-noise-cancellation~=0.2.5",
    "numpy>=2.2.6",
    "pvporcupine>=3.0.5",
    "pvrecorder>=1.2.7",
    "pyarrow==20.0.0",
    "pyaudio>=0.2.14",
    "python-dotenv",
    "rpi-ws281x>=5.0.0; sys_platform == 'linux'",
    "sounddevice>=0.5.2",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot" }

[project.optional-dependencies]
hardware = [
    "adafruit-circuitpython-neopixel",
    "rpi-ws281x",
]
vision = [
    "mediapipe; (sys_platform == 'darwin' and platform_machine == 'arm64') or (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'win32' and platform_machine == 'AMD64')",
    "opencv-python; sys_platform != 'linux'",
    "opencv-python-headless; sys_platform == 'linux'",
]
