[project]
name = "lelamp-runtime"
version = "0.1.0"
description = "Python-based control system for LeLamp robotic lamp with voice AI, motor control, and vision capabilities"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "feetech-servo-sdk>=1.0.0,<2.0.0",
    "lerobot>=0.3.3",
    "livekit>=1.0.23",
    "livekit-agents>=1.3.10",
    "livekit-plugins-openai>=1.3.10",
    "livekit-plugins-silero>=1.3.10",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "numpy>=2.2.6",
    "pvporcupine>=3.0.5,<4.0.0",
    "pvrecorder>=1.2.7,<2.0.0",
    "pyarrow==20.0.0",
    "pyaudio>=0.2.14,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "rpi-ws281x>=5.0.0,<6.0.0; sys_platform == 'linux'",
    "sounddevice>=0.5.2,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "certifi>=2024.0.0",
    "packaging>=24.0,<25.0.0",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot" }

[project.optional-dependencies]
hardware = [
    "adafruit-circuitpython-neopixel>=6.3.0,<7.0.0",
    "rpi-ws281x>=5.0.0,<6.0.0",
]
vision = [
    "mediapipe>=0.10.0,<1.0.0; (sys_platform == 'darwin' and platform_machine == 'arm64') or (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'win32' and platform_machine == 'AMD64')",
    "opencv-python>=4.9.0,<5.0.0; sys_platform != 'linux'",
    "opencv-python-headless>=4.9.0,<5.0.0; sys_platform == 'linux'",
]
